--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <div class="restaurants-list">
 
                         <div class="menus-card"> 
-                            <a href="pages html/la palette du goût.html" class="page-link">
+                            <a href="pages-html/la palette-du-goût.html" class="page-link">
                                 <div class="menus-card__new">Nouveau</div>
-                                <img class="menus-card__img" src="images/restaurants/jay-La palette du goût-unsplash.jpg" alt="Restaurant la palette du gout" />
+                                <img class="menus-card__img" src="images/restaurants/jay-La-palette-du-goût-unsplash.jpg" alt="Restaurant la palette du gout" />
                                 <div class="menus-card__info">
                                     <div class="menus-card__text">
                                         <h3>La palette du goût</h3>
@@ -84,9 +84,9 @@
                         </div>
                     
                         <div class="menus-card"> 
-                            <a href="pages html/la note enchantée.html" class="page-link">
+                            <a href="pages-html/la-note-enchantée.html" class="page-link">
                                 <div class="menus-card__new">Nouveau</div>
-                                <img class="menus-card__img" src="images/restaurants/stil-La note enchantée-unsplash.jpg" alt="Restaurant la note enchantée" />
+                                <img class="menus-card__img" src="images/restaurants/stil-La-note-enchantée-unsplash.jpg" alt="Restaurant la note enchantée" />
                                 <div class="menus-card__info">
                                     <div class="menus-card__text">
                                         <h3>La note enchantée</h3>
@@ -101,8 +101,8 @@
                         </div>
 
                         <div class="menus-card"> 
-                            <a href="pages html/à la française.html" class="page-link">
-                                <img class="menus-card__img" src="images/restaurants/toa-A la française-unsplash.jpg" alt="Restaurant A la française" />
+                            <a href="pages-html/à-la-française.html" class="page-link">
+                                <img class="menus-card__img" src="images/restaurants/toa-A-la-française-unsplash.jpg" alt="Restaurant A la française" />
                                 <div class="menus-card__info">
                                     <div class="menus-card__text">
                                         <h3>À la française</h3>
@@ -117,8 +117,8 @@
                         </div>
 
                         <div class="menus-card"> 
-                            <a href="pages html/le délice des sens.html" class="page-link">
-                                <img class="menus-card__img" src="images/restaurants/louis-Le délice des sens-unsplash.jpg" alt="Restaurant Le délice des sens" />
+                            <a href="pages-html/le-délice-des-sens.html" class="page-link">
+                                <img class="menus-card__img" src="images/restaurants/louis-Le-délice-des-sens-unsplash.jpg" alt="Restaurant Le délice des sens" />
                                 <div class="menus-card__info">
                                     <div class="menus-card__text">
                                         <h3>Le délice des sens</h3>
@@ -149,7 +149,7 @@
                         <a href="#" class="page-link" >Devenir partenaire</a>
                     </li>
                     <li class="footer-links__element">
-                        <a href="pages html/mentions.html" class="page-link">Mentions légales</a>
+                        <a href="pages-html/mentions.html" class="page-link">Mentions légales</a>
                     </li>
                     <li class="footer-links__element">
                         <a class="page-link" href="mailto:">Contact</a>
