--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="restaurants-list">
 
                         <div class="menus-card"> 
-                            <a href="pages-html/la palette-du-goût.html" class="page-link">
+                            <a href="pages-html/la-palette-du-goût.html" class="page-link">
                                 <div class="menus-card__new">Nouveau</div>
                                 <img class="menus-card__img" src="images/restaurants/jay-La-palette-du-goût-unsplash.jpg" alt="Restaurant la palette du gout" />
                                 <div class="menus-card__info">
