update pages html

--- a/pages-html/la-note-enchantée.html
+++ b/pages-html/la-note-enchantée.html
@@ -20,7 +20,7 @@
             </header>
 
             <main>
-            <img class="photo-restau" src="../images/restaurants/stil-La note enchantée-unsplash.jpg" alt="Restaurant La note enchantée" />
+            <img class="photo-restau" src="../images/restaurants/stil-La-note-enchantée-unsplash.jpg" alt="Restaurant La note enchantée" />
 
             <section class="menu">
                     <div class="menu-heading">
@@ -173,10 +173,10 @@
                         <a href="#" class="page-link" >Devenir partenaire</a>
                     </li>
                     <li class="footer-links__element">
-                        <a href="mentions.html" class="page-link">Mentions légales</a>
+                        <a href="#" class="page-link">Mentions légales</a>
                     </li>
                     <li class="footer-links__element">
-                        <a class="page-link" href="mailto:">Contact</a>
+                        <a class="page-link" href="mailto:romainbikey@yahoo.fr">Contact</a>
                     </li>
                 </ul>
             </footer>
