--- a/pages-html/la-palette-du-goût.html
+++ b/pages-html/la-palette-du-goût.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Le délice des sens</title>
+        <title>La palette du goût</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/5f5fe7de0e.js" crossorigin="anonymous"></script>
@@ -20,11 +20,11 @@
             </header>
 
             <main>
-            <img class="photo-restau" src="../images/restaurants/louis-Le délice des sens-unsplash.jpg" alt="Restaurant Le délice des sens" />
+            <img class="photo-restau" src="../images/restaurants/jay-La-palette-du-goût-unsplash.jpg" alt="Restaurant La palette du goût" />
 
             <section class="menu">
                     <div class="menu-heading">
-                        <h1 class="menu-heading__title">Le délice des sens</h1>
+                        <h1 class="menu-heading__title">La palette du goût</h1>
                         <div class="heart">
                             <i class="far fa-heart heart-icon heart-icon--empty"></i> 
                             <i class="fas fa-heart heart-icon heart-icon--full"></i>
@@ -38,8 +38,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Tartare de thon</h3>
-                                    <p class="menu-card__subtitle">Assaisonné au yuzu</p>
+                                    <h3 class="menu-card__title">Fricassée d'escargot</h3>
+                                    <p class="menu-card__subtitle">Au piment d'Espelette </p>
                                 </div>
                                 <p class="menu-card__price">25€</p>
                                 <div class="menu-card__check">
@@ -48,8 +48,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Bouchée de homard croustillant </h3>
-                                    <p class="menu-card__subtitle">Et sa farandole de petits légumes</p>
+                                    <h3 class="menu-card__title">Foie gras de canard mi-cuit</h3>
+                                    <p class="menu-card__subtitle">Et ses copeaux de truffe noire</p>
                                 </div>
                                 <p class="menu-card__price">35€</p>
                                 <div class="menu-card__check">
@@ -58,8 +58,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Velouté de cèpes </h3>
-                                    <p class="menu-card__subtitle">Aux truffes</p>
+                                    <h3 class="menu-card__title">Oeuf au plat</h3>
+                                    <p class="menu-card__subtitle">Assaisonné à la truffe sur lit de caviar</p>
                                 </div>
                                 <p class="menu-card__price">20€</p>
                                 <div class="menu-card__check">
@@ -75,8 +75,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Poulet rôti aux herbes de Provence </h3>
-                                    <p class="menu-card__subtitle">Et sa crème de truffe</p>
+                                    <h3 class="menu-card__title">Filet de boeuf aux herbes</h3>
+                                    <p class="menu-card__subtitle">Accompagné de sa ribambelle de légumes</p>
                                 </div>
                                 <p class="menu-card__price">40€</p>
                                 <div class="menu-card__check">
@@ -85,8 +85,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Langouste rôtie </h3>
-                                    <p class="menu-card__subtitle">Et ses légumes de saison</p>
+                                    <h3 class="menu-card__title">Parmentier de queue de boeuf</h3>
+                                    <p class="menu-card__subtitle">À la truffe noire sur sa purée de panais</p>
                                 </div>
                                 <p class="menu-card__price">35€</p>
                                 <div class="menu-card__check">
@@ -95,8 +95,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Côte de boeuf Angus </h3>
-                                    <p class="menu-card__subtitle">Et sa purée de panais</p>
+                                    <h3 class="menu-card__title">Filet de turbot</h3>
+                                    <p class="menu-card__subtitle">Aux agrumes</p>
                                 </div>
                                 <p class="menu-card__price">44€</p>
                                 <div class="menu-card__check">
@@ -112,8 +112,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Farandole de desserts</h3>
-                                    <p class="menu-card__subtitle">Du chef</p>
+                                    <h3 class="menu-card__title">Paris-Brest</h3>
+                                    <p class="menu-card__subtitle">Revisité</p>
                                 </div>
                                 <p class="menu-card__price">18€</p>
                                 <div class="menu-card__check">
@@ -122,8 +122,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Crème brulée</h3>
-                                    <p class="menu-card__subtitle">Revisitée</p>
+                                    <h3 class="menu-card__title">Macaron au chocolat d'exception </h3>
+                                    <p class="menu-card__subtitle">Et glace à la vanille de Madagascar</p>
                                 </div>
                                 <p class="menu-card__price">22€</p>
                                 <div class="menu-card__check">
@@ -132,10 +132,10 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Tiramisu </h3>
-                                    <p class="menu-card__subtitle">À la noisette</p>
+                                    <h3 class="menu-card__title">Mousse au chocolat </h3>
+                                    <p class="menu-card__subtitle">Au piment d'Espelette et à la truffe noire</p>
                                 </div>
-                                <p class="menu-card__price">23€</p>
+                                <p class="menu-card__price">23€ </p>
                                 <div class="menu-card__check">
                                     <i class="fas fa-check-circle menu-card__icon"></i>
                                 </div>
@@ -163,10 +163,10 @@
                         <a href="#" class="page-link" >Devenir partenaire</a>
                     </li>
                     <li class="footer-links__element">
-                        <a href="mentions.html" class="page-link">Mentions légales</a>
+                        <a href="#" class="page-link">Mentions légales</a>
                     </li>
                     <li class="footer-links__element">
-                        <a class="page-link" href="mailto:">Contact</a>
+                        <a class="page-link" href="mailto:romainbikey@yahoo.fr">Contact</a>
                     </li>
                 </ul>
             </footer>
