--- a/pages-html/le-délice-des-sens.html
+++ b/pages-html/le-délice-des-sens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>A la française</title>
+        <title>Le délice des sens</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/5f5fe7de0e.js" crossorigin="anonymous"></script>
@@ -20,12 +20,11 @@
             </header>
 
             <main>
-            <img class="photo-restau" src="../images/restaurants/toa-A la française-unsplash.jpg" alt="Restaurant A la française" />
+            <img class="photo-restau" src="../images/restaurants/louis-Le-délice-des-sens-unsplash.jpg" alt="Restaurant Le délice des sens" />
 
             <section class="menu">
                     <div class="menu-heading">
-                        <h1 class="menu-heading__title">À la française
-                        </h1>
+                        <h1 class="menu-heading__title">Le délice des sens</h1>
                         <div class="heart">
                             <i class="far fa-heart heart-icon heart-icon--empty"></i> 
                             <i class="fas fa-heart heart-icon heart-icon--full"></i>
@@ -36,11 +35,11 @@
                         <section class="menu-content menu-content--1">
                             <h2 class="menu-content__heading">Entrées</h2>
                             <div class="menu-content__bottombar"></div>
-                            
+
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Tartare de poulpe acidulé</h3>
-                                    <p class="menu-card__subtitle">Aux zestes d'orange</p>
+                                    <h3 class="menu-card__title">Tartare de thon</h3>
+                                    <p class="menu-card__subtitle">Assaisonné au yuzu</p>
                                 </div>
                                 <p class="menu-card__price">25€</p>
                                 <div class="menu-card__check">
@@ -49,8 +48,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Velouté de légumes d'antan</h3>
-                                    <p class="menu-card__subtitle">Carotte, panais, topinambour</p>
+                                    <h3 class="menu-card__title">Bouchée de homard croustillant </h3>
+                                    <p class="menu-card__subtitle">Et sa farandole de petits légumes</p>
                                 </div>
                                 <p class="menu-card__price">35€</p>
                                 <div class="menu-card__check">
@@ -59,8 +58,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Soupe à l'oignon</h3>
-                                    <p class="menu-card__subtitle">Revisitée</p>
+                                    <h3 class="menu-card__title">Velouté de cèpes </h3>
+                                    <p class="menu-card__subtitle">Aux truffes</p>
                                 </div>
                                 <p class="menu-card__price">20€</p>
                                 <div class="menu-card__check">
@@ -76,8 +75,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Coquilles Saint-Jacques</h3>
-                                    <p class="menu-card__subtitle">Accompagnées d'une purée de panais</p>
+                                    <h3 class="menu-card__title">Poulet rôti aux herbes de Provence </h3>
+                                    <p class="menu-card__subtitle">Et sa crème de truffe</p>
                                 </div>
                                 <p class="menu-card__price">40€</p>
                                 <div class="menu-card__check">
@@ -86,8 +85,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Magret de canard</h3>
-                                    <p class="menu-card__subtitle">Et parmentier de pommes de terre</p>
+                                    <h3 class="menu-card__title">Langouste rôtie </h3>
+                                    <p class="menu-card__subtitle">Et ses légumes de saison</p>
                                 </div>
                                 <p class="menu-card__price">35€</p>
                                 <div class="menu-card__check">
@@ -96,8 +95,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                                    <p class="menu-card__subtitle">Sur son lit de gnocchis aux légumes</p>
+                                    <h3 class="menu-card__title">Côte de boeuf Angus </h3>
+                                    <p class="menu-card__subtitle">Et sa purée de panais</p>
                                 </div>
                                 <p class="menu-card__price">44€</p>
                                 <div class="menu-card__check">
@@ -113,8 +112,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Pétales de violettes glacés</h3>
-                                    <p class="menu-card__subtitle">Et purée de noisettes</p>
+                                    <h3 class="menu-card__title">Farandole de desserts</h3>
+                                    <p class="menu-card__subtitle">Du chef</p>
                                 </div>
                                 <p class="menu-card__price">18€</p>
                                 <div class="menu-card__check">
@@ -123,8 +122,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Fondant au chocolat</h3>
-                                    <p class="menu-card__subtitle">Revisité</p>
+                                    <h3 class="menu-card__title">Crème brulée</h3>
+                                    <p class="menu-card__subtitle">Revisitée</p>
                                 </div>
                                 <p class="menu-card__price">22€</p>
                                 <div class="menu-card__check">
@@ -133,8 +132,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Millefeuille croustillant</h3>
-                                    <p class="menu-card__subtitle">Myrtilles et pâte d’amande</p>
+                                    <h3 class="menu-card__title">Tiramisu </h3>
+                                    <p class="menu-card__subtitle">À la noisette</p>
                                 </div>
                                 <p class="menu-card__price">23€</p>
                                 <div class="menu-card__check">
@@ -145,7 +144,7 @@
                     </div>
 
                     <div class="menu__btn">
-                    <button type="submit" class="btn">Commander</button>
+                        <button type="submit" class="btn">Commander</button>
                     </div>
 
             </section>
@@ -164,10 +163,10 @@
                         <a href="#" class="page-link" >Devenir partenaire</a>
                     </li>
                     <li class="footer-links__element">
-                        <a href="mentions.html" class="page-link">Mentions légales</a>
+                        <a href="#" class="page-link">Mentions légales</a>
                     </li>
                     <li class="footer-links__element">
-                        <a class="page-link" href="mailto:">Contact</a>
+                        <a class="page-link" href="mailto:romainbikey@yahoo.fr">Contact</a>
                     </li>
                 </ul>
             </footer>
