--- a/pages-html/à-la-française.html
+++ b/pages-html/à-la-française.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>La palette du goût</title>
+        <title>A la française</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/5f5fe7de0e.js" crossorigin="anonymous"></script>
@@ -20,11 +20,12 @@
             </header>
 
             <main>
-            <img class="photo-restau" src="../images/restaurants/jay-La palette du goût-unsplash.jpg" alt="Restaurant La palette du goût" />
+            <img class="photo-restau" src="../images/restaurants/toa-A-la-française-unsplash.jpg" alt="Restaurant A la française" />
 
             <section class="menu">
                     <div class="menu-heading">
-                        <h1 class="menu-heading__title">La palette du goût</h1>
+                        <h1 class="menu-heading__title">À la française
+                        </h1>
                         <div class="heart">
                             <i class="far fa-heart heart-icon heart-icon--empty"></i> 
                             <i class="fas fa-heart heart-icon heart-icon--full"></i>
@@ -35,11 +36,11 @@
                         <section class="menu-content menu-content--1">
                             <h2 class="menu-content__heading">Entrées</h2>
                             <div class="menu-content__bottombar"></div>
-
+                            
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Fricassée d'escargot</h3>
-                                    <p class="menu-card__subtitle">Au piment d'Espelette </p>
+                                    <h3 class="menu-card__title">Tartare de poulpe acidulé</h3>
+                                    <p class="menu-card__subtitle">Aux zestes d'orange</p>
                                 </div>
                                 <p class="menu-card__price">25€</p>
                                 <div class="menu-card__check">
@@ -48,8 +49,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Foie gras de canard mi-cuit</h3>
-                                    <p class="menu-card__subtitle">Et ses copeaux de truffe noire</p>
+                                    <h3 class="menu-card__title">Velouté de légumes d'antan</h3>
+                                    <p class="menu-card__subtitle">Carotte, panais, topinambour</p>
                                 </div>
                                 <p class="menu-card__price">35€</p>
                                 <div class="menu-card__check">
@@ -58,8 +59,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Oeuf au plat</h3>
-                                    <p class="menu-card__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h3 class="menu-card__title">Soupe à l'oignon</h3>
+                                    <p class="menu-card__subtitle">Revisitée</p>
                                 </div>
                                 <p class="menu-card__price">20€</p>
                                 <div class="menu-card__check">
@@ -75,8 +76,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Filet de boeuf aux herbes</h3>
-                                    <p class="menu-card__subtitle">Accompagné de sa ribambelle de légumes</p>
+                                    <h3 class="menu-card__title">Coquilles Saint-Jacques</h3>
+                                    <p class="menu-card__subtitle">Accompagnées d'une purée de panais</p>
                                 </div>
                                 <p class="menu-card__price">40€</p>
                                 <div class="menu-card__check">
@@ -85,8 +86,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Parmentier de queue de boeuf</h3>
-                                    <p class="menu-card__subtitle">À la truffe noire sur sa purée de panais</p>
+                                    <h3 class="menu-card__title">Magret de canard</h3>
+                                    <p class="menu-card__subtitle">Et parmentier de pommes de terre</p>
                                 </div>
                                 <p class="menu-card__price">35€</p>
                                 <div class="menu-card__check">
@@ -95,8 +96,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Filet de turbot</h3>
-                                    <p class="menu-card__subtitle">Aux agrumes</p>
+                                    <h3 class="menu-card__title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <p class="menu-card__subtitle">Sur son lit de gnocchis aux légumes</p>
                                 </div>
                                 <p class="menu-card__price">44€</p>
                                 <div class="menu-card__check">
@@ -112,8 +113,8 @@
 
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Paris-Brest</h3>
-                                    <p class="menu-card__subtitle">Revisité</p>
+                                    <h3 class="menu-card__title">Pétales de violettes glacés</h3>
+                                    <p class="menu-card__subtitle">Et purée de noisettes</p>
                                 </div>
                                 <p class="menu-card__price">18€</p>
                                 <div class="menu-card__check">
@@ -122,8 +123,8 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Macaron au chocolat d'exception </h3>
-                                    <p class="menu-card__subtitle">Et glace à la vanille de Madagascar</p>
+                                    <h3 class="menu-card__title">Fondant au chocolat</h3>
+                                    <p class="menu-card__subtitle">Revisité</p>
                                 </div>
                                 <p class="menu-card__price">22€</p>
                                 <div class="menu-card__check">
@@ -132,10 +133,10 @@
                             </div>
                             <div class="menu-card">
                                 <div class="menu-card__text">
-                                    <h3 class="menu-card__title">Mousse au chocolat </h3>
-                                    <p class="menu-card__subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                    <h3 class="menu-card__title">Millefeuille croustillant</h3>
+                                    <p class="menu-card__subtitle">Myrtilles et pâte d’amande</p>
                                 </div>
-                                <p class="menu-card__price">23€ </p>
+                                <p class="menu-card__price">23€</p>
                                 <div class="menu-card__check">
                                     <i class="fas fa-check-circle menu-card__icon"></i>
                                 </div>
@@ -144,7 +145,7 @@
                     </div>
 
                     <div class="menu__btn">
-                        <button type="submit" class="btn">Commander</button>
+                    <button type="submit" class="btn">Commander</button>
                     </div>
 
             </section>
@@ -163,10 +164,10 @@
                         <a href="#" class="page-link" >Devenir partenaire</a>
                     </li>
                     <li class="footer-links__element">
-                        <a href="mentions.html" class="page-link">Mentions légales</a>
+                        <a href="#" class="page-link">Mentions légales</a>
                     </li>
                     <li class="footer-links__element">
-                        <a class="page-link" href="mailto:">Contact</a>
+                        <a class="page-link" href="mailto:romainbikey@yahoo.fr">Contact</a>
                     </li>
                 </ul>
             </footer>
