--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <a href="pages-html/mentions.html" class="page-link">Mentions légales</a>
                     </li>
                     <li class="footer-links__element">
-                        <a class="page-link" href="mailto:">Contact</a>
+                        <a class="page-link" href="mailto:romainbikey@yahoo.fr">Contact</a>
                     </li>
                 </ul>
             </footer>
